1.2.3i7:

1.2.3i6:
    Core & Setup:
    * 0041 FIX : setup.py now handles non existing wwwuser gracefully...

    Checks & Agents:
    * 0040 : Add agent plugin to test local hostname resolving...
    * 0020 FIX : Inventory problem with inventory_processes parameter...

    Multisite:
    * 0000 : Improved performance of LDAP sync by refactoring the group sync code

    WATO:
    * 0042 FIX : Removed debug outputs from service inventory...


1.2.3i5:
    Core:
    * Automatically remove duplicate checks when monitoring with Agent+SNMP
       at the same time. TCP based ones have precedence.
    * inventory check of SNMP devices now does scan per default (configurable)
    * FIX: inventory check now honors settings for exit code
    * FIX: avoid exception nodes of cluster have different agent type
    * FIX: continue inventory, if one check does not support it
    * FIX: fix configuration of explicit SNMP community, allow unicode
    * FIX: avoid invalid cache of 2nd and up hosts in bulk inventory
    * FIX: fixed error handling in SNMP scan, inventory check fails now
           if SNMP agent is not responding
    * FIX: Ignore snmp_check_interval cache in interactive situations (e.g.  -nv)
    * FIX: check_mk config generation: on computing the checks parameters
           there is no longer a small chance that existing rules get modified

    Event Console:
    * check_mkevents now available as C binary: check_mkevents_c
    * FIX: use default values for unset variables in actions

    Multisite:
    * Speed-O-Meter: now measure only service checks. Host checks
      are omitted, since they do not really matter and make the
      results less useful when using CMC.
    * Added host aliases filter to some views (host/service search)
    * It is now possible to enforce checkboxes in views upon view loading
      (needs to be confgured per view via the view editor)
    * Wiki Sidebar Snapin: showing navigation and quicksearch. OMD only.