@@ -1,0 +1,8 @@
+Title: LDAP: Improved error reporting during synchronisation
+Level: 1
+Component: multisite
+Version: 1.2.3i7
+Date: 1383642604
+Class: fix
+
+Providing more details in case of errors during sync
